fix whitespace on vertical screens

--- a/src/markets/Markets.scss
+++ b/src/markets/Markets.scss
@@ -11,6 +11,7 @@
 
 .markets-wrapper {
   width: 100%;
+  min-height: calc(100vh - 420px);
   overflow: hidden;
   overflow-x: auto;
   .header-row {
